// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GoogleMap /> render if \`props.isFluid\` is \`true\` should return the right structure 1`] = `
<GoogleMap
  apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
  bounds={null}
  hasDefaultStyles={false}
  height="400px"
  isFluid={true}
  isFullBleed={false}
  isShowingApproximateLocation={false}
  isShowingExactLocation={false}
  latitude={0}
  longitude={0}
  markers={Array []}
  onBoundsChange={[Function]}
>
  <Card
    fluid={true}
    style={
      Object {
        "height": "100%",
        "maxWidth": "100%",
      }
    }
  >
    <div
      className="ui fluid card"
      onClick={[Function]}
      style={
        Object {
          "height": "100%",
          "maxWidth": "100%",
        }
      }
    >
      <GoogleMapReact
        apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
        bounds={null}
        hasDefaultStyles={false}
        isShowingApproximateLocation={false}
        isShowingExactLocation={false}
        latitude={0}
        longitude={0}
        markers={Array []}
        onBoundsChange={[Function]}
      >
        <div />
      </GoogleMapReact>
    </div>
  </Card>
</GoogleMap>
`;

exports[`<GoogleMap /> render if \`props.isFullBleed\` is \`true\` should return the right structure 1`] = `
<GoogleMap
  apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
  bounds={null}
  hasDefaultStyles={false}
  height="400px"
  isFluid={false}
  isFullBleed={true}
  isShowingApproximateLocation={false}
  isShowingExactLocation={false}
  latitude={0}
  longitude={0}
  markers={Array []}
  onBoundsChange={[Function]}
>
  <GoogleMapReact
    apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
    bounds={null}
    hasDefaultStyles={false}
    isShowingApproximateLocation={false}
    isShowingExactLocation={false}
    latitude={0}
    longitude={0}
    markers={Array []}
    onBoundsChange={[Function]}
  >
    <div />
  </GoogleMapReact>
</GoogleMap>
`;

exports[`<GoogleMap /> render if \`state.isDynamicMapShowing\` is \`false\` should return the right structure 1`] = `
<GoogleMap
  apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
  bounds={null}
  hasDefaultStyles={false}
  height="400px"
  isFluid={false}
  isFullBleed={false}
  isShowingApproximateLocation={false}
  isShowingExactLocation={false}
  latitude={0}
  longitude={0}
  markers={Array []}
  onBoundsChange={[Function]}
>
  <Card
    fluid={true}
    style={
      Object {
        "height": "400px",
        "maxWidth": "640px",
      }
    }
  >
    <div
      className="ui fluid card"
      onClick={[Function]}
      style={
        Object {
          "height": "400px",
          "maxWidth": "640px",
        }
      }
    >
      <img
        src="immmaaage"
      />
    </div>
  </Card>
</GoogleMap>
`;

exports[`<GoogleMap /> render if \`state.isDynamicMapShowing\` is \`true\` should return the right structure 1`] = `
<GoogleMap
  apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
  bounds={null}
  hasDefaultStyles={false}
  height="400px"
  isFluid={false}
  isFullBleed={false}
  isShowingApproximateLocation={false}
  isShowingExactLocation={false}
  latitude={0}
  longitude={0}
  markers={Array []}
  onBoundsChange={[Function]}
>
  <Card
    fluid={true}
    style={
      Object {
        "height": "400px",
        "maxWidth": "640px",
      }
    }
  >
    <div
      className="ui fluid card"
      onClick={[Function]}
      style={
        Object {
          "height": "400px",
          "maxWidth": "640px",
        }
      }
    >
      <GoogleMapReact
        apiKey="AIzaSyB83oLNUmqes7wBlxqQ7yQbXuF-K5faJb4"
        bounds={null}
        hasDefaultStyles={false}
        isShowingApproximateLocation={false}
        isShowingExactLocation={false}
        latitude={0}
        longitude={0}
        markers={Array []}
        onBoundsChange={[Function]}
      >
        <div />
      </GoogleMapReact>
    </div>
  </Card>
</GoogleMap>
`;
